# quizapii

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
docs/: AI_STRATEGY.md  API.md  ARCHITECTURE.md  CODE_ORGANIZATION.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  ERROR_HANDLING.md  IMPROVEMENTS.md  README.md  STATUS.md  TESTING.md  TODO.md
quiz_db/: db  snap.0000000000000302
src/: docs.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/handlers/: mod.rs  quiz_handler.rs
src/models/: create_quiz_dto.rs  error.rs  mod.rs  question.rs  quiz.rs  submission.rs  test_types.rs  update_quiz_dto.rs  validation.rs
src/repository/: base.rs  mod.rs  quiz_repository.rs
tests/: api_tests.rs  lib.rs  mod.rs
tests/api/: auth_api_tests.rs  auth_tests.rs  mod.rs  quiz_api_tests.rs  quiz_tests.rs
tests/common/: context.rs  fixtures.rs  mod.rs  server.rs
tests/handlers/: auth_handler_tests.rs  mod.rs  quiz_handler_test.rs  quiz_handler_tests.rs
tests/integration/: common.rs  integration_test.rs  mod.rs  quiz_tests.rs  server_tests.rs  test_utils_tests.rs
tests/integration/handlers/: mod.rs
tests/integration/models/: mod.rs  quiz_tests.rs
tests/integration/repository/: mod.rs
tests/models/: mod.rs  question_tests.rs  quiz_model_tests.rs  quiz_test.rs  quiz_tests.rs  submission_test.rs  user_model_tests.rs
tests/repository/: mod.rs  quiz_repository_test.rs  quiz_repository_tests.rs  quiz_tests.rs  user_tests.rs
