[package]
name = "quizmo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
jsonwebtoken = "8.1"
bcrypt = "0.10"
validator = { version = "0.16", features = ["derive"] }
utoipa = "3.5"
utoipa-swagger-ui = { version = "3.1", features = ["axum"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
test-log = "0.2"
mockall = "0.11"
