[package]
name = "quizmo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = "8.1"
bcrypt = "0.10"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "3.1.5", features = ["uuid", "yaml"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }

# Database and utilities
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
nanoid = "0.4"
chrono = "0.4"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
env_logger = "0.10"
test-log = "0.2"
mockall = "0.11"
tempfile = "3.3"
