[package]
name = "quizmo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros", "rt-multi-thread"] }
axum = { version = "0.6", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = "8.1"
bcrypt = "0.10"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
futures-util = "0.3"
dotenv = "0.15"
axum-macros = "0.3"
thiserror = "1.0"

# Database and utilities
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.107"
env_logger = "0.10"
test-log = "0.2"
mockall = "0.11"
tempfile = "3.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.8"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
pretty_assertions = "1.4"

[[bin]]
name = "quizmo"
path = "src/main.rs"

[lib]
name = "quizmo"
path = "src/lib.rs"

[features]
test-utils = []

[[test]]
name = "integration"
path = "tests/mod.rs"
harness = true

[workspace.metadata.cargo-all-features]
skip_optional_dependencies = true
